<resources>
    <string name="app_name">Invet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_share">Share DB</string>
    <string name="menu_import">Import DB</string>

    <string name="home_new">Create new DB</string>
    <string name="home_open">Open existing DB</string>

    <string name ="add_entry_hint_boxname">Boxname</string>
    <string name ="add_entry_hint_boxnumber">Boxnumber</string>
    <string name ="add_entry_hint_entryname">Entry name</string>
    <string name ="add_entry_hint_entrycount">Entry count</string>
    <string name ="add_entry_text_add_itme">Add item</string>
    <string name="add_entry_item_list">Items added</string>
    <string name="add_entry_add_item">Add Item</string>
    <string name="add_entry_item_name">Item Name</string>
    <string name="add_entry_item_count">Item Count</string>

    <string name="save">Save</string>
    <string name="abort">Abort</string>
</resources>