<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.main.invet.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_displayBoxes"
            app:destination="@id/nav_displayBoxes" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.main.invet.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.main.invet.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_addentry"
        android:name="com.main.invet.ui.addEntry.addEntryFragment"
        android:label="Add Entry"
        tools:layout="@layout/fragment_addentry">
        <action
            android:id="@+id/action_nav_addentry_to_nav_displayBoxes"
            app:destination="@id/nav_displayBoxes" />
    </fragment>
    <fragment
        android:id="@+id/nav_displayBoxes"
        android:name="com.main.invet.ui.displayboxes.displayBoxes"
        android:label="fragment_display_boxes"
        tools:layout="@layout/fragment_display_boxes" >
        <action
            android:id="@+id/action_nav_displayBoxes_to_displayItems"
            app:destination="@id/displayItems" />
        <action
            android:id="@+id/action_nav_displayBoxes_to_nav_addentry"
            app:destination="@id/nav_addentry" />
    </fragment>
    <fragment
        android:id="@+id/displayItems"
        android:name="com.main.invet.ui.displayitems.displayItems"
        android:label="fragment_display_items"
        tools:layout="@layout/fragment_display_items" >
        <action
            android:id="@+id/action_displayItems_to_nav_displayBoxes"
            app:destination="@id/nav_displayBoxes" />
    </fragment>
    <activity
        android:id="@+id/mainActivity"
        android:name="com.main.invet.MainActivity"
        android:label="app_bar_main"
        tools:layout="@layout/app_bar_main" />
</navigation>